# 2codes

./: .gitignore  CMakeLists.txt  README.md
arquitecturaComputadores1/: deco8.sv  processorUnit.sv  unidadCorriemiento.sv  unidadCorrimiento2.sv
arquitecturaComputadores1/proyectoArqui/: arm.sv  fantastico.txt  imem.dat.bak  parcial2.qsf  parcial2.qws  parcial2.sta.summary  parcial2_nativelink_simulation.rpt  reducedVersionARM.sv
arquitecturaComputadores1/proyectoArqui/.qsys_edit/: preferences.xml
arquitecturaComputadores1/proyectoArqui/assembly_instructions/: Main.asm  Main.txt  Saimon&Saimon.txt  autoFantastico(used).asm  cargando(used).asm  cargando.asm  cargando.txt  carrera.txt  choque.asm  choque.txt  contagios(used).asm  contagios.asm  especifaciones dmemfile.txt  fantastico.txt  menu.txt  policia.txt  prueba.txt  pruebaParpadeo de luz.txt
arquitecturaComputadores1/proyectoArqui/db/: parcial2.(0).cnf.cdb  parcial2.(0).cnf.hdb  parcial2.(1).cnf.cdb  parcial2.(1).cnf.hdb  parcial2.(10).cnf.cdb  parcial2.(10).cnf.hdb  parcial2.(11).cnf.cdb  parcial2.(11).cnf.hdb  parcial2.(12).cnf.cdb  parcial2.(12).cnf.hdb  parcial2.(13).cnf.cdb  parcial2.(13).cnf.hdb  parcial2.(14).cnf.cdb  parcial2.(14).cnf.hdb  parcial2.(15).cnf.cdb  parcial2.(15).cnf.hdb  parcial2.(16).cnf.cdb  parcial2.(16).cnf.hdb  parcial2.(17).cnf.cdb  parcial2.(17).cnf.hdb  parcial2.(18).cnf.cdb  parcial2.(18).cnf.hdb  parcial2.(19).cnf.cdb  parcial2.(19).cnf.hdb  parcial2.(2).cnf.cdb  parcial2.(2).cnf.hdb  parcial2.(3).cnf.cdb  parcial2.(3).cnf.hdb  parcial2.(4).cnf.cdb  parcial2.(4).cnf.hdb  parcial2.(5).cnf.cdb  parcial2.(5).cnf.hdb  parcial2.(6).cnf.cdb  parcial2.(6).cnf.hdb  parcial2.(7).cnf.cdb  parcial2.(7).cnf.hdb  parcial2.(8).cnf.cdb  parcial2.(8).cnf.hdb  parcial2.(9).cnf.cdb  parcial2.(9).cnf.hdb  (+46 more)
arquitecturaComputadores1/proyectoArqui/instrucciones/: Main.txt  cargando.txt  choque.txt  contagios.txt  contagiosTabla.txt  fantastico.txt  instruccionTabla.txt  policia.txt
arquitecturaComputadores1/proyectoArqui/output_files/: parcial2.asm.rpt  parcial2.cdf  parcial2.done  parcial2.eda.rpt  parcial2.fit.rpt  parcial2.fit.summary  parcial2.flow.rpt  parcial2.jdi  parcial2.map.rpt  parcial2.map.smsg  parcial2.map.summary  parcial2.pin  parcial2.sof  parcial2.sta.rpt  parcial2.sta.summary
arquitecturaComputadoresUno/: alu.sv  alu.sv.bak  examplesArqui1.qpf  examplesArqui1.qsf  examplesArqui1.qws  unidadCorriemiento.sv  unidadCorriemiento.sv.bak  unidadCorrimiento2.sv
arquitecturaComputadoresUno/db/: .cmp.kpt  examplesArqui1.(0).cnf.cdb  examplesArqui1.(0).cnf.hdb  examplesArqui1.asm.qmsg  examplesArqui1.asm.rdb  examplesArqui1.asm_labs.ddb  examplesArqui1.cbx.xml  examplesArqui1.cmp.bpm  examplesArqui1.cmp.cdb  examplesArqui1.cmp.hdb  examplesArqui1.cmp.idb  examplesArqui1.cmp.logdb  examplesArqui1.cmp.rdb  examplesArqui1.cmp_merge.kpt  examplesArqui1.db_info  examplesArqui1.eda.qmsg  examplesArqui1.fit.qmsg  examplesArqui1.hier_info  examplesArqui1.hif  examplesArqui1.map.bpm  examplesArqui1.map.cdb  examplesArqui1.map.hdb  examplesArqui1.map.kpt  examplesArqui1.map.qmsg  examplesArqui1.map.rdb  examplesArqui1.map_bb.cdb  examplesArqui1.map_bb.hdb  examplesArqui1.pre_map.hdb  examplesArqui1.root_partition.map.reg_db.cdb  examplesArqui1.routing.rdb  examplesArqui1.rtlv.hdb  examplesArqui1.rtlv_sg.cdb  examplesArqui1.sta.qmsg  examplesArqui1.sta.rdb  examplesArqui1.sta_cmp.6_slow_1200mv_85c.tdb  examplesArqui1.tiscmp.fast_1200mv_0c.ddb  examplesArqui1.tiscmp.slow_1200mv_0c.ddb  examplesArqui1.tiscmp.slow_1200mv_85c.ddb  examplesArqui1.tmw_info  examplesArqui1.vpr.ammdb  (+2 more)
arquitecturaComputadoresUno/incremental_db/compiled_partitions/: examplesArqui1.db_info  examplesArqui1.root_partition.cmp.ammdb  examplesArqui1.rrp.hdb  (+9 more)
arquitecturaComputadoresUno/output_files/: examplesArqui1.asm.rpt  examplesArqui1.done  examplesArqui1.eda.rpt  examplesArqui1.fit.rpt  examplesArqui1.fit.summary  examplesArqui1.flow.rpt  examplesArqui1.jdi  examplesArqui1.map.rpt  examplesArqui1.map.summary  examplesArqui1.pin  examplesArqui1.sof  examplesArqui1.sta.rpt
informatica3/ABB/: Main.java
informatica3/ordenamiento/: Main.java
informatica3/recursividad/: Main.java  eje1.java  eje2.java  eje3.java  eje4.java  eje5.java  eje6.java  eje7.java
informatica3/repasoParcial1/: eje1.java  eje2.java  eje3.java  eje4.java  eje5.java  recursivadadEj1.java  recursivadadEj2.java  resursividadEj.java
informatica3/utils/: ArrayQueue.java  ArrayStack.java  ArrayUtilSort.java  BinaryNode.java  BinaryTree.java  ListNode.java  ListQueue.java  ListStack.java  UtilGeneral.java  utilGeneral.java  utilSort.java
metodos_numericos/: biseccion  biseccion.cpp  falsaPosicion  falsaPosicion.cpp  herramientas  iteracionDePuntoFijo.cpp  matrixBuild.txt  newtonRaphson.cpp  writeMatrix.cpp
metodos_numericos/diferenciacion/: board.txt  diferenciacion.cpp  diferenciacionTabla.cpp  nodes.txt
metodos_numericos/ecuaciones_diferenciales/: board.txt  errorExacto.cpp  euler.cpp  eulerBoard.txt  heun.cpp  heunBoard.txt  puntoMedio.cpp  puntoMedioBoard.txt  rungeKutta.cpp  rungeKuttaBoard.txt
metodos_numericos/integracion/: gaussLegendre.cpp  simpson.cpp  trapecioCompuesta.cpp
metodos_numericos/interpolacion/: InterpolacionSplines.cpp  lagrange.cpp  matrix.txt  nodes.txt  polynomialRegression.cpp  segmentaria.cpp
metodos_numericos/localizacion_raices/: bisection.cpp  falsePosition.cpp  iterativoDePuntoFijo.cpp  newtonRaphson.cpp  secante.cpp
metodos_numericos/modificatedCodes/: cuadraturaGauss.txt  cuadraturaGaussGuia.cpp  jacobiGuia4.cpp  valuarFuncion.cpp
metodos_numericos/parcial2/: board.txt  ejercicio2.cpp  ejercicio3.cpp  eulerBoard.txt  valuarFuncion.cpp
metodos_numericos/recuperatorio/: board.txt  eje1.cpp  eje2.cpp  eje3.cpp
metodos_numericos/regresion/: matrix.txt  nodes.txt  polynomialRegression.cpp  regresionPolinomica.cpp
metodos_numericos/sistemas_ecuaciones_lineales/: data.txt  eliminacionGaussiana.c  eliminacionGaussiana.cpp  gaussSeidel.cpp  gaussSeidelRelax.cpp  gaussianElimination.cpp  jacobi.cpp  matrix.txt
(+46 files in other folders)
