cmake_minimum_required(VERSION 3.23)
project(2codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(Biseccion metodos_numericos/localizacion_raices/bisection.cpp metodos_numericos/ecuaciones_diferenciales/euler.cpp metodos_numericos/ecuaciones_diferenciales/heun.cpp metodos_numericos/ecuaciones_diferenciales/puntoMedio.cpp metodos_numericos/ecuaciones_diferenciales/rungeKutta.cpp metodos_numericos/parcial2/ejercicio2.cpp metodos_numericos/parcial2/ejercicio3.cpp metodos_numericos/integracion/tablas/simpsonTabla.cpp metodos_numericos/parcial2/valuarFuncion.cpp metodos_numericos/integracion/tablas/trapecioTabla.cpp)
add_executable(FalsaPosicion metodos_numericos/localizacion_raices/falsePosition.cpp)
add_executable(IterativoDePuntoFijo metodos_numericos/localizacion_raices/iterativoDePuntoFijo.cpp)
add_executable(NewtonRapshon metodos_numericos/localizacion_raices/newtonRaphson.cpp)
add_executable(Secante metodos_numericos/localizacion_raices/secante.cpp)
add_executable(EliminacionGaussiana metodos_numericos/sistemas_ecuaciones_lineales/gaussianElimination.cpp )
add_executable(Jacobi metodos_numericos/sistemas_ecuaciones_lineales/jacobi.cpp)
add_executable(GaussSeidel metodos_numericos/sistemas_ecuaciones_lineales/gaussSeidel.cpp)
add_executable(Lagrange metodos_numericos/interpolacion/lagrange.cpp)
add_executable(Segmentaria metodos_numericos/interpolacion/segmentaria.cpp)
add_executable(RegresionPolinomica metodos_numericos/regresion/polynomialRegression.cpp)
add_executable(Jacobiguia4 metodos_numericos/modificatedCodes/jacobiGuia4.cpp)
add_executable(gaussSeidelRelajacion metodos_numericos/sistemas_ecuaciones_lineales/gaussSeidelRelax.cpp)
add_executable(WriteMatrix metodos_numericos/writeMatrix.cpp)
add_executable(Trapecio metodos_numericos/integracion/trapecioCompuesta.cpp)
add_executable(Simpson metodos_numericos/integracion/simpson.cpp)
add_executable(GaussLegendre metodos_numericos/integracion/gaussLegendre.cpp)
add_executable(Diferenciacion metodos_numericos/diferenciacion/diferenciacion.cpp)
add_executable(Euler metodos_numericos/ecuaciones_diferenciales/euler.cpp)
add_executable(Heun metodos_numericos/ecuaciones_diferenciales/heun.cpp)
add_executable(PuntoMedio metodos_numericos/ecuaciones_diferenciales/puntoMedio.cpp)
add_executable(RungeKutta metodos_numericos/ecuaciones_diferenciales/rungeKutta.cpp)
add_executable(Spline metodos_numericos/interpolacion/InterpolacionSplines.cpp)
add_executable(Ejercico2 metodos_numericos/parcial2/ejercicio2.cpp)
add_executable(Ejercico3 metodos_numericos/parcial2/ejercicio3.cpp)
add_executable(ValuarFuncion metodos_numericos/parcial2/valuarFuncion.cpp)
add_executable(DiferenciacionTabla metodos_numericos/diferenciacion/diferenciacionTabla.cpp)
add_executable(SimpsonTabla metodos_numericos/integracion/tablas/simpsonTabla.cpp)
add_executable(TrapecioTabla metodos_numericos/integracion/tablas/trapecioTabla.cpp)