cmake_minimum_required(VERSION 3.23)
project(2codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(1.Biseccion metodos_numericos/localizacion_raices/bisection.cpp metodos_numericos/ecuaciones_diferenciales/euler.cpp metodos_numericos/ecuaciones_diferenciales/heun.cpp metodos_numericos/ecuaciones_diferenciales/puntoMedio.cpp metodos_numericos/ecuaciones_diferenciales/rungeKutta.cpp metodos_numericos/parcial2/ejercicio2.cpp metodos_numericos/parcial2/ejercicio3.cpp metodos_numericos/integracion/tablas/simpsonTabla.cpp metodos_numericos/parcial2/valuarFuncion.cpp metodos_numericos/integracion/tablas/trapecioTabla.cpp)
add_executable(1.FalsaPosicion metodos_numericos/localizacion_raices/falsePosition.cpp)
add_executable(1.IterativoDePuntoFijo metodos_numericos/localizacion_raices/iterativoDePuntoFijo.cpp)
add_executable(1.NewtonRapshon metodos_numericos/localizacion_raices/newtonRaphson.cpp)
add_executable(1.Secante metodos_numericos/localizacion_raices/secante.cpp)
add_executable(2.EliminacionGaussiana metodos_numericos/sistemas_ecuaciones_lineales/gaussianElimination.cpp )
add_executable(2.Jacobi metodos_numericos/sistemas_ecuaciones_lineales/jacobi.cpp)
add_executable(2.GaussSeidel metodos_numericos/sistemas_ecuaciones_lineales/gaussSeidel.cpp)
add_executable(2.gaussSeidelRelajacion metodos_numericos/sistemas_ecuaciones_lineales/gaussSeidelRelax.cpp)
add_executable(3.Lagrange metodos_numericos/interpolacion/lagrange.cpp)
add_executable(3.RegresionPolinomica metodos_numericos/regresion/polynomialRegression.cpp)
add_executable(3.SplinesCubicas metodos_numericos/interpolacion/InterpolacionSplines.cpp)
add_executable(4.Simpson metodos_numericos/integracion/simpson.cpp)
add_executable(4.GaussLegendre metodos_numericos/integracion/gaussLegendre.cpp)
add_executable(4.Trapecio metodos_numericos/integracion/trapecioCompuesta.cpp)
add_executable(5.Diferenciacion metodos_numericos/diferenciacion/diferenciacion.cpp)
add_executable(6.Euler metodos_numericos/ecuaciones_diferenciales/euler.cpp)
add_executable(6.Heun metodos_numericos/ecuaciones_diferenciales/heun.cpp)
add_executable(6.PuntoMedio metodos_numericos/ecuaciones_diferenciales/puntoMedio.cpp)
add_executable(6.RungeKutta metodos_numericos/ecuaciones_diferenciales/rungeKutta.cpp)
add_executable(7.DiferenciacionTabla metodos_numericos/diferenciacion/diferenciacionTabla.cpp)
add_executable(7.SimpsonTabla metodos_numericos/integracion/tablas/simpsonTabla.cpp)
add_executable(7.TrapecioTabla metodos_numericos/integracion/tablas/trapecioTabla.cpp)
add_executable(Jacobiguia4 metodos_numericos/modificatedCodes/jacobiGuia4.cpp)
add_executable(WriteMatrix metodos_numericos/writeMatrix.cpp)
add_executable(Ejercico2 metodos_numericos/parcial2/ejercicio2.cpp)
add_executable(Ejercico3 metodos_numericos/parcial2/ejercicio3.cpp)
add_executable(ValuarFuncion metodos_numericos/parcial2/valuarFuncion.cpp)
